thiis is from local machine, testing if I can try to push

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "danceplaygroundapi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/JollyChua/danceplaygroundAPI.git"
   },
-  "author": "",
+  "author": "Jolly",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JollyChua/danceplaygroundAPI/issues"
@@ -18,5 +17,6 @@
   "homepage": "https://github.com/JollyChua/danceplaygroundAPI#readme",
   "dependencies": {
     "express": "^4.17.2"
-  }
+  },
+  "description": ""
 }
