--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "homepage": "https://github.com/JollyChua/danceplaygroundAPI#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "body-parser": "1.19.1",
+    "express": "^4.17.2",
+    "express-handlebars": "6.0.2",
+    "mongoose": "6.1.6",
+    "nodemon": "2.0.15"
   },
-  "description": ""
+  "description": "",
+  "keywords": []
 }
