--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "body-parser": "1.19.1",
     "express": "^4.17.2",
     "express-handlebars": "6.0.2",
-    "mongoose": "6.1.6",
-    "nodemon": "2.0.15"
+    "mongoose": "6.1.6"
   },
   "description": "",
   "keywords": []
