class CRUD is working

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "body-parser": "1.19.1",
     "express": "^4.17.2",
     "express-handlebars": "6.0.2",
+    "joi": "17.5.0",
     "mongoose": "6.1.6",
-    "nodemon": "2.0.15"
+    "nodemon": "^2.0.15"
   },
   "description": "",
   "keywords": []
