--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/JollyChua/danceplaygroundAPI#readme",
   "dependencies": {
     "body-parser": "1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-handlebars": "6.0.2",
     "joi": "17.5.0",
