--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "homepage": "https://github.com/JollyChua/danceplaygroundAPI#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-handlebars": "6.0.2",
     "joi": "17.5.0",
