--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.2",
     "express-handlebars": "6.0.2",
     "joi": "17.5.0",
+    "mongodb": "^4.3.1",
     "mongoose": "6.1.6",
     "nodemon": "^2.0.15"
   },
